fixes result display on mobile

--- a/styles.css
+++ b/styles.css
@@ -410,7 +410,7 @@ html {
 
 .Result__title {
   font-weight: 700;
-  font-size: 56px;
+  font-size: 35px;
   line-height: 67.2px;
 }
 
